fixed sizing issues for repsonsiveness, buttons now collapse in column and the height for the teamboxes is now on auto to correspond

--- a/styles.css
+++ b/styles.css
@@ -43,47 +43,42 @@ h1, .hole, .bean-bag {
 h1 {
     font-size: 50px;
     top: 30px;
-
+margin-bottom: 30px;
 }
 
-h1 {
-    margin-bottom: 30px;
-}
 
  .playTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    padding-bottom: 20px;
+    text-align: center;
+    margin-top: 30px;
+    color: rgb(111, 159, 111);
 }
 
 .teams-wrapper {
     display: flex;
     flex-wrap: wrap;
-    margin: 10px;
+    margin: 20px;
 }
 
 #blue-team, #green-team  {
     flex: 40%;
+    flex-grow: 1;
     width: 350px;
-    height: 300px;
-    border: 3px solid rgb(111, 159, 111);
+    height: auto;
+    border: 3px solid  rgb(193, 110, 0);
+    margin: 10px;
 }
 
 #outcome {
-    
     justify-content: center;
-    align-items: center;
-
-  
+    align-items: center;  
     
 }
 
 button {
     width: 150px;
     height: 150px;
-      border-radius: 10px 30px 10px 30px;
+    border-radius: 10px 30px 10px 30px;
+    margin: 10px 5px 40px 5px;
 }
 
 button:hover {
@@ -92,10 +87,11 @@ button:hover {
 }
 
 .pointsBtn{
-    margin-top: 50px;
+   margin-top: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-flow: wrap;
 }
 
 #reset {
@@ -109,15 +105,19 @@ button:hover {
 
 #blueOneBtn, #blueThreeBtn {
     background-color: rgb(84, 84, 163);
+    border: 3px solid rgb(40, 40, 68);
     color: white;
+
 }
 
 #blueOneBtn:hover, #blueThreeBtn:hover  {
     background-color: rgba(193, 109, 0, 0.716);
+    
 }
  
 #greenOneBtn, #greenThreeBtn {
     background-color: rgb(111, 159, 111);
+    border: 3px solid  rgb(35, 75, 35);
     color: white;
 }
 
@@ -156,7 +156,7 @@ button:hover {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    
+    color: rgb(84, 84, 163);
 
 }
 
